<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    android:orientation="vertical"
    tools:context=".app.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textSize="20dp"
            android:textColor="#516D2C"
            android:layout_margin="20dp"
            android:gravity="center"/>

<!--        <ImageView-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="200dp"-->
<!--            android:src="@drawable/logo2"-->
<!--            android:layout_gravity="center"/>-->

        <Button
            android:id="@+id/bt_createe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_add"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_selector"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/bt_updatee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_edit"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_selector"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/bt_deletee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_del"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_selector"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/bt_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_view"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_selector"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>