<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/add_bg"
    android:padding="5dp" >
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/record_title"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="#516D2C"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/no"/>
        <TextView
            android1:id="@+id/c_orderid"
            android1:layout_weight="1"
            android1:gravity="center"
            android1:text="@string/student_no"
            android1:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/user"/>
        <TextView
            android1:id="@+id/c_username"
            android1:layout_weight="1"
            android1:gravity="center"
            android1:text="@string/student_name"
            android1:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/major"/>
        <TextView
            android1:id="@+id/c_name"
            android1:layout_weight="1"
            android1:gravity="center"
            android1:text="@string/student_major"
            android1:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/book"/>

        <TextView
            android1:id="@+id/c_price"
            android1:gravity="center"
            android1:text="@string/bar_code"
            android1:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <ListView
        android1:id="@+id/lst_orders"
        android:layout_width="match_parent"
        android:layout_height="537dp">

    </ListView>



</LinearLayout>