<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/register_bg"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:text="@string/register_title"
            android:textSize="30sp"
            android:textColor="#516D2C"/>

<!--        <ImageView-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:src="@drawable/register"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginBottom="20dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/user"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/register_user"
                android:textSize="14dp"
                android:gravity="center"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_input"
                android:background="@drawable/editext_selector"
                android:textSize="14dp"
                android:textColor="#000000"
                android:inputType="text"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="left|center"
                android:maxLength="20"
                android:paddingLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@mipmap/psw"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/register_psw"
                android:textSize="14dp"
                android:gravity="center"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_input_psw"
                android:background="@drawable/editext_selector"
                android:textSize="14dp"
                android:textColor="#000000"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="left|center"
                android:maxLength="20"
                android:paddingLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@mipmap/psw"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/register_sure_psw"
                android:textSize="14dp"
                android:gravity="center"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/pwd2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_input_sure_psw"
                android:background="@drawable/editext_selector"
                android:textSize="14dp"
                android:textColor="#000000"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="left|center"
                android:maxLength="20"
                android:paddingLeft="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register_register"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_selector"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</RelativeLayout>