<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.MainActivity">

    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="#C0C0C0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/main_home"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_book"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/main_book"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/main_me"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ly_tab_bar"
        android:background="#D3D3D3">

    </FrameLayout>


</RelativeLayout>
