<?xml version="1.0" encoding="utf-8"?>
<!--修改 activity_register.xml 为 LinearLayout 布局-->
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/add_bg"
    android:orientation="vertical">

    <!--三个编辑框-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:text="@string/edit_title"
        android:textColor="#516D2C"
        android:textSize="22dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/userupd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:src="@mipmap/no"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="60dp"
            android:layout_marginRight="10dp"
            android:layout_height="match_parent"
            android:text="@string/student_no"
            android:textSize="16dp"
            android:gravity="center"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_studentid"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editext_selector"

            android:padding="10dp" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_selector"
            android:padding="5dp"
            android:text="@string/btn_select"
            android:textColor="#ffffff"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:src="@mipmap/user"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="60dp"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_height="match_parent"
            android:text="@string/student_name"
            android:textSize="16dp"
            android:gravity="center"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_studentname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editext_selector"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="32dp"
            android:src="@mipmap/major"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="60dp"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_height="match_parent"
            android:text="@string/student_major"
            android:textSize="16dp"
            android:gravity="center"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_majoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editext_selector"
            android:padding="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:src="@mipmap/book"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="60dp"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_height="match_parent"
            android:text="@string/bar_code"
            android:textSize="16dp"
            android:gravity="center"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_booknum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editext_selector"

            android:padding="10dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_edit"
        android:layout_width="415dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_edit"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>